--- a/build.yaml
+++ b/build.yaml
@@ -15,7 +15,7 @@
 include:
   - board: nice_nano_v2
     shield: lily58_left
-    snippet: studio-rpc-usb-uart
+    snippet: zmk-usb-logging
   - board: nice_nano_v2
     shield: lily58_right
     snippet: zmk-usb-logging
